kubernetes/apps/database/crunchy-postgres/app/netpol.yaml
---
# yaml-language-server: $schema=https://raw.githubusercontent.com/datreeio/CRDs-catalog/main/cilium.io/ciliumnetworkpolicy_v2.json
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: crunchy-postgres
spec:
  endpointSelector: &crunchy
    matchLabels:
      postgres-operator.crunchydata.com/control-plane: "pgo"
  ingress:
    - fromEndpoints: [*crunchy]
    # same namespace
    - fromEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: &ns database
  egress:
    # same namespace
    - toEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: *ns
    # allow access to all cluster pods
    - toEndpoints:
        - matchExpressions:
            - key: postgres-operator.crunchydata.com/cluster
              operator: Exists
            - key: io.kubernetes.pod.namespace
              operator: Exists
    # allow access to apiserver
    - toEntities:
        - kube-apiserver
    - toEntities:
        - host
      toPorts:
        - ports:
            - port: "6443"
